<resources>
    <string name="app_name">OsunoLock</string>

    <!-- Loading request -->
    <string name="loading_text">Bạn đang thực hiện thêm vân tay vào khóa. Làm ơn để khóa trong vòng 2m, giữ kết nối bluetooth ổn định và thực hiện quét vân tay trên khóa.</string>

    <!-- Dialog -->
    <string name="dialog">Quá trình tạo %s mới hoàn tất. Từ bây giờ bạn có thể sử dụng %s này để mở khóa.</string>

    <!-- Device scan item -->
    <string name="lock_item_name">HTT-407-S105</string>

    <!-- Another -->
    <string name="button_save_1">Lưu giá trị</string>
    <string name="button_save_2">Lưu cài đặt</string>
    <string name="button_add_item">Thêm mới+</string>
    <string name="button_add">Tạo</string>
    <string name="button_turn_on">Bật</string>
    <string name="button_logout">Đăng xuất</string>
    <string name="button_cancel">Hủy</string>
    <string name="button_delete_settings">Xóa tất cả cài đặt</string>

    <!-- Setting -->
    <string name="lock_info">Thông tin khóa</string>
    <string name="remote_unlock_setting">Điều khiển từ xa</string>
    <string name="lock_clock">Đồng hồ của khóa</string>
    <string name="import_another_lock">Tải cài đặt khóa từ bên ngoài</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="another_policy">Chính sách phát triển</string>
    <string name="warning_label">Cảnh báo khóa</string>
    <string name="notification_label">Thông báo ứng dụng</string>

    <!-- Setting Navigation -->
    <string name="sound">Âm thanh ứng dụng</string>
    <string name="touch_to_unlock">Chạm để mở khóa trên ứng dụng</string>
    <string name="user_info_label">Quyền hạn người dùng</string>
    <string name="lock_group_label">Nhóm khóa</string>
    <string name="transfer_lock">Nhường khóa</string>
    <string name="languages_label">Ngôn ngữ</string>
    <string name="screen_lock_label">Chụp màn hình khóa</string>
    <string name="service_label">Dịch vụ người dùng</string>
    <string name="about_app_label">Thông tin ứng dụng</string>

    <!-- Login/Sign up -->
    <string name="phone_number_title">SĐT</string>
    <string name="phone_number_value">Số điện thoại</string>
    <string name="password_title">Mật khẩu</string>
    <string name="retype_password_title">Nhập lại</string>
    <string name="password_value">******</string>
    <string name="button_login">Đăng nhập</string>
    <string name="button_signup">Đăng ký</string>
    <string name="url_forgot_password">Quên mật khẩu?</string>
    <string name="do_not_have_account">Bạn chưa có tài khoản? <u>Đăng ký ngay.</u></string>
    <string name="already_have_account">Bạn đã có tài khoản? <u>Đăng nhập.</u></string>

    <!-- Manager Lock -->
    <string name="card_label">Thẻ từ</string>
    <string name="remote_label">Điều khiển</string>
    <string name="ekeys_label">EKeys</string>
    <string name="passcode_label">Mật khẩu</string>
    <string name="admin_label">Share quyền</string>
    <string name="record_label">Lịch sử</string>
    <string name="finger_label">Vân tay</string>
    <string name="setting_label">Cài đặt</string>

    <!-- Scan Lock -->
    <string name="smart_key_label">Khóa cửa</string>
    <string name="gate_key_label">Khóa cổng</string>
    <string name="scroll_key_label">Khóa cửa cuốn</string>
    <string name="timer_key_label">Đồng hồ đếm ngược</string>
    <string name="paired_devices">Thiết bị đã ghép nối</string>
    <string name="available_devices">Thiết bị khả dụng</string>

    <!-- Remote unlock -->
    <string name="mode_remote">Chế độ hiện tại: Tắt</string>
    <string name="tip_remote">Tính năng này cho phép bạn bật tắt chế độ điều khiển từ xa, khi tắt, tất cả các chức năng mở cửa từ xa đều bị vô hiệu hóa và ngược lại</string>

    <!-- Menu list-->
    <string name="menu_add_lock">Thêm Khóa</string>
    <string name="menu_gateway">Cổng kết nối</string>
    <string name="menu_messages">Tin nhắn</string>
    <string name="menu_customer_service">Dịch vụ khách hàng</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="nav_open">Mở</string>
    <string name="nav_close">Đóng</string>

    <!-- String format -->
    <string name="date">%s ** to ** %s</string>

    <!-- Lock info -->
    <string name="lock_number_title">Mã của khóa</string>
    <string name="lock_number_value">S31_ef8a97</string>
    <string name="mac_id_title">MAC/ID</string>
    <string name="mac_id_value">50:F9:B1:97:8A:EF/5357835</string>
    <string name="battery_title">Pin</string>
    <string name="battery_value">65%</string>
    <string name="validity_title">Vòng đời quản lý</string>
    <string name="validity_value">Vĩnh viễn</string>
    <string name="lock_name_title">Tên khóa</string>
    <string name="lock_name_value">SK Lock</string>
    <string name="lock_admin_passcode">Mã của quản lý</string>

    <!-- Lock sound -->
    <string name="lock_sound_title">Âm thanh khóa</string>
    <string name="lock_volume_title">Chọn âm lượng khóa</string>
    <string name="volume_very_low">Rất nhỏ</string>
    <string name="volume_low">Nhỏ</string>
    <string name="volume_medium">Vừa phải</string>
    <string name="volume_high">Lớn</string>
    <string name="volume_very_high">Rất lớn</string>
    <string name="tip_lock_sound">Bằng việt bật tắt âm thanh khóa, bạn có thể nghe hoặc tắt tiếng từ khóa.</string>

    <!-- Manager List -->
    <string name="name_receiver">Tên người nhận</string>
    <string name="address_receiver">Email/SĐT người nhận</string>
    <string name="address_title">Địa chỉ</string>
    <string name="days_of_weeks">Lặp lại các ngày trong tuần</string>
    <string name="name_title">Tên</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="start_date_value">2022-05-11 | 10:07</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="end_date_value">2022-05-11 | 11:07</string>
    <string name="counting_time">Số lần mở</string>
    <string name="delay_time">Thời gian chờ</string>
    <string name="delay_time_value">5s</string>
    <string name="auto_lock">Tự động khóa</string>
    <string name="tip_counting_time"><u>Gợi ý:</u> Số lần mở sẽ cài đặt số lượt mở tối đa mà người dùng được mở khóa, mỗi lần mở hệ thống sẽ tự động trừ đi 1 lượt. Khi về 0, thông tin người dùng sẽ bị xóa khỏi hệ thống.</string>
    <string name="tip_period"><u>Gợi ý:</u> Kể từ ngày và giờ bắt đầu tới ngày và giờ kết thúc, người dùng sẽ được toàn quyền mở khóa. Khi hết thời gian, thông tin người dùng sẽ bị xóa khỏi hệ thống.</string>
    <string name="tip_cycle"><u>Gợi ý:</u> Với mỗi ngày được chọn ở trên, người dùng sẽ được toàn quyền mở khóa, mỗi ngày không được chọn ở trên, người dùng sẽ bị vô hiệu hóa chức năng mở khóa.</string>

    <!-- Days of the week -->
    <string name="monday">2</string>
    <string name="tuesday">3</string>
    <string name="wednesday">4</string>
    <string name="thursday">5</string>
    <string name="friday">6</string>
    <string name="saturday">7</string>
    <string name="sunday">CN</string>

    <!-- Auto Lock -->
    <string name="tip_auto_lock">Khóa mà bạn đang sử dụng sẽ tự động đóng sau khi hết thời gian đếm ngược. Đảm bảo rằng bạn sẽ mở khóa trước khi thời gian đếm ngược kết thúc.</string>

    <!-- Tamper Alert -->
    <string name="tamper_alert_str">By turning on, you enable the TAMPER alert.</string>

    <!-- Reset Button -->
    <string name="reset_button_str">By turning on, you can pair the lock again by long pressing the RESET button.\nBy turning off, the RESET button is disabled.</string>

    <!-- Upload Data -->
    <string name="upload_data_str">Upload data from lock to server. It may take several minutes.</string>
</resources>