<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/low_gray_overlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineReceiver"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/address_title" />

            <EditText
                android:id="@+id/editAccountReceiver"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:hint="@string/address_receiver"
                android:paddingEnd="@dimen/padding_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_view"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineName"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/name_title" />

            <EditText
                android:id="@+id/editName"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:hint="@string/name_receiver"
                android:paddingEnd="@dimen/padding_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineStartDate"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/start_date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/dateStartDate"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingEnd="@dimen/padding_horizontal"
                android:text="@string/start_date_value" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_view"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineEndDate"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/end_date" />

            <TextView
                android:id="@+id/dateEndDate"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingEnd="@dimen/padding_horizontal"
                android:text="@string/end_date_value" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="@dimen/margin_view"
            android:fontFamily="@font/pro_italic"
            android:paddingHorizontal="@dimen/padding_horizontal"
            android:text="@string/tip_period" />
    </LinearLayout>

    <TextView
        android:id="@+id/buttonAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_horizontal_1"
        android:background="@drawable/bg_button_shape_blue"
        android:fontFamily="@font/compact"
        android:gravity="center"
        android:paddingVertical="@dimen/padding_vertical_2"
        android:text="@string/button_add"
        android:textColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>