<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/low_gray_overlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineReceiver"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/address_title" />

            <EditText
                android:id="@+id/editAccountReceiver"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:hint="@string/address_receiver"
                android:paddingEnd="@dimen/padding_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_view"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineName"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/name_title" />

            <EditText
                android:id="@+id/editName"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:paddingEnd="@dimen/padding_horizontal"
                android:text="@string/name_receiver" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearCountingTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lineCountingTimes"
                style="@style/label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:paddingStart="@dimen/padding_horizontal"
                android:text="@string/counting_time"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editCountingTimes"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:hint="10"
                android:inputType="number"
                android:paddingEnd="@dimen/padding_horizontal" />
        </LinearLayout>

        <TextView
            android:fontFamily="@font/pro_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="@dimen/margin_view"
            android:paddingHorizontal="@dimen/padding_horizontal"
            android:text="@string/tip_counting_time" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>