<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/low_gray_overlay">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearSound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_view"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lineSound"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/sound" />

                <Switch
                    android:id="@+id/switchSound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@color/white"
                    android:checked="true"
                    android:longClickable="false"
                    android:paddingEnd="@dimen/padding_horizontal"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearUnlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small_view"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lineUnlock"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:paddingStart="@dimen/padding_horizontal"
                    android:text="@string/touch_to_unlock" />

                <Switch
                    android:id="@+id/switchUnlock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:background="@color/white"
                    android:checked="true"
                    android:longClickable="false"
                    android:paddingEnd="@dimen/padding_horizontal"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearMenuManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lineUserInfo"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/user_info_label" />

                <TextView
                    android:id="@+id/lineLockGroup"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small_view"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/lock_group_label" />

                <TextView
                    android:id="@+id/lineTransferLock"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small_view"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/transfer_lock" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lineLanguages"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/languages_label" />

                <TextView
                    android:id="@+id/lineScreenLock"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small_view"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/screen_lock_label" />

                <TextView
                    android:id="@+id/lineService"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small_view"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/service_label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearAboutApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lineAbout"
                    style="@style/label_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                    android:paddingHorizontal="@dimen/padding_horizontal"
                    android:paddingVertical="@dimen/padding_vertical_2"
                    android:text="@string/about_app_label" />
            </LinearLayout>

            <TextView
                android:id="@+id/buttonLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_horizontal_1"
                android:layout_marginVertical="@dimen/padding_horizontal"
                android:background="@drawable/bg_button_shape_blue"
                android:fontFamily="@font/compact"
                android:gravity="center"
                android:paddingVertical="@dimen/padding_vertical_2"
                android:text="@string/button_logout"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>